k8s/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gough
  namespace: gough
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - "gough.penguintech.cloud"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: api-manager
          port: 5000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: webui
          port: 3000
